# quadrupel-rs

./: .gitignore  .gitmodules  Cargo.toml  Pipfile  README.md  build_python_bindings.sh  memory.x  runner.sh
.cargo/: config  config.toml
.run/: All Tests.run.xml  Build python bindings.run.xml  Debug.run.xml  Run HARDWARE.run.xml  Run QEMU.run.xml  main.run.xml
mpu6050-dmp-rs/: Cargo.toml
mpu6050-dmp-rs/src/: accel.rs  firmware_loader.rs  gyro.rs  lib.rs  sensor.rs
pc_terminal/: pc-terminal
qemu/: REFERENCE_HEX.hex  qemu.sh
quadrupel-dronecode/: Cargo.toml
quadrupel-dronecode/src/: main.rs
quadrupel-dronecode/src/control/: angle_mode.rs  calibrate.rs  control_loop.rs  flash_protocol.rs  flight_state.rs  message.rs  mod.rs  process_message.rs  raw_mode.rs  state.rs  uart_protocol.rs
quadrupel-dronecode/src/control/modes/: calibrate_mode.rs  full_control.rs  individual_motor_control.rs  manual_control.rs  mod.rs  panic.rs  safe.rs
quadrupel-dronecode/src/filters/: butterworth_2nd.rs  compl_filter.rs  kalman_filter.rs  mod.rs
quadrupel-dronecode/src/hardware/: adc.rs  i2c.rs  mod.rs  motors.rs  mpu6050.rs  ms5611.rs  spi_flash.rs  sqrt.rs  time.rs  uart.rs
quadrupel-dronecode/src/hardware/mpu6050/: firmware_loader.rs  sensor.rs
quadrupel-python/: .gitignore  drone_visual.py  flash_data (4).txt  joystickhandler.py  kalman_drone_test.py  main.py  midimotorcontroller.py  mpd24midi.py  msgs.py  sensor_fusion_test.py  setup.yml
quadrupel-shared/: Cargo.toml
quadrupel-shared/src/: lib.rs  message.rs  state.rs
quadrupel_python_bindings/: Cargo.toml
quadrupel_python_bindings/src/: lib.rs
sdk/: .gitignore  generate-device-lib.sh
sdk/nrf51822/: Cargo.toml
sdk/nrf51822/src/: aar.rs  amli.rs  ccm.rs  lib.rs  spim1.rs
sdk/nrf51822/src/aar/: enable.rs  intenclr.rs  intenset.rs  scratchptr.rs
sdk/nrf51822/src/adc/: busy.rs  config.rs  enable.rs  intenclr.rs  intenset.rs
sdk/nrf51822/src/amli/: rampri.rs
sdk/nrf51822/src/ccm/: enable.rs  intenclr.rs  intenset.rs  micstatus.rs  mode.rs  scratchptr.rs  shorts.rs
sdk/nrf51822/src/clock/: hfclkrun.rs  hfclkstat.rs  intenclr.rs  intenset.rs  lfclkrun.rs  lfclksrc.rs  lfclksrccopy.rs  lfclkstat.rs
sdk/nrf51822/src/ecb/: intenclr.rs  intenset.rs
sdk/nrf51822/src/ficr/: deviceaddrtype.rs  overrideen.rs
sdk/nrf51822/src/gpio/: dir.rs  dirclr.rs  dirset.rs  in_.rs  out.rs  outclr.rs  outset.rs  pin_cnf.rs
sdk/nrf51822/src/gpiote/: config.rs  intenclr.rs  intenset.rs
sdk/nrf51822/src/lpcomp/: anadetect.rs  enable.rs  extrefsel.rs  intenclr.rs  intenset.rs  psel.rs  refsel.rs  result.rs  shorts.rs
sdk/nrf51822/src/nvmc/: config.rs  eraseall.rs  eraseuicr.rs  ready.rs
sdk/nrf51822/src/power/: dcdcen.rs  dcdcforce.rs  intenclr.rs  intenset.rs  pofcon.rs  ramon.rs  ramonb.rs  ramstatus.rs  reset.rs  resetreas.rs  systemoff.rs
sdk/nrf51822/src/ppi/: chen.rs  chenclr.rs  chenset.rs  chg.rs
sdk/nrf51822/src/qdec/: dbfen.rs  enable.rs  intenclr.rs  intenset.rs  ledpol.rs  reportper.rs  sampleper.rs  shorts.rs
sdk/nrf51822/src/radio/: crccnf.rs  crcstatus.rs  dacnf.rs  dai.rs  intenclr.rs  intenset.rs  mode.rs  override4.rs  pcnf0.rs  pcnf1.rs  rxaddresses.rs  rxmatch.rs  shorts.rs  test.rs  txaddress.rs
src/: main.rs  nrf51822.ld  nrf5x_common.ld  test.rs
src/control/: message.rs  mod.rs  state.rs
src/hardware/: adc.rs  barometer.rs  gpio.rs  i2c.rs  led.rs  leds.rs  mod.rs  motor.rs  motors.rs  timers.rs  uart.rs
src/utils/: array_queue.rs
(+75 files in other folders)
