[package]
name = "quadrupel-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = {version = "0.7.4", features = ["inline-asm"]}
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
alloc-cortex-m = "0.4.2"
fixed = "1.14.0"
ringbuffer = {git = "https://github.com/NULLx76/ringbuffer/", branch = "const-fn", features = ["const-fn"], version = "0.8.5"}
log = "0.4.16"
embedded-hal = "0.2.7"
mpu6050-dmp = "0.2.0"
nrf51-hal = "0.15.0"
nrf51-pac = "0.11.0"

[dev-dependencies]
panic-semihosting = { version = "0.6.0", features = ["exit"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 2
incremental = false

[profile.dev]
incremental = false

[profile.test]
incremental = false

[profile.bench]
incremental = false