[workspace]
members = ["quadrupel-dronecode", "quadrupel-shared", "quadrupel_python_bindings", "mpu6050-dmp-rs"]
default-members = ["quadrupel-dronecode", "quadrupel-shared", "mpu6050-dmp-rs"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
incremental = false

[profile.dev]
incremental = false

[profile.test]
incremental = false

[profile.bench]
incremental = false