[package]
name = "quadrupel-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version = "2.0.0-rc.1", default-features = false, features=["alloc", "derive"]}
serde = {version = "1.0.136", features=["derive"], optional=true}
crc = "3.0.0"

[features]
python = ["serde"]
