cargo-features = ["per-package-target"]

[package]
name = "quadrupel_python_bindings"
version = "0.1.0"
edition = "2021"
# Cortex-M0 and Cortex-M0+
forced-target = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "quadrupel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
quadrupel-shared = {path="../quadrupel-shared", features=["python"]}
serde_json = "1.0.79"
